load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "appconfiguration",
    srcs = [
        "app_configuration.go",
        "app_configuration_data_source.go",
        "app_configuration_feature_resource.go",
        "app_configuration_key_data_source.go",
        "app_configuration_key_resource.go",
        "app_configuration_keys_data_source.go",
        "app_configuration_resource.go",
        "feature_structs.go",
        "registration.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/services/appconfiguration",
    visibility = ["//:__subpackages__"],
    deps = [
        "//helpers/azure",
        "//helpers/tf",
        "//internal/clients",
        "//internal/sdk",
        "//internal/services/appconfiguration/migration",
        "//internal/services/appconfiguration/parse",
        "//internal/services/appconfiguration/validate",
        "//internal/tags",
        "//internal/tf/pluginsdk",
        "//internal/tf/validation",
        "//internal/timeouts",
        "//utils",
        "//vendor/github.com/Azure/go-autorest/autorest",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/pointer",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonids",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonschema",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/identity",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/location",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/tags",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/appconfiguration/2023-03-01/configurationstores",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/appconfiguration/2023-03-01/deletedconfigurationstores",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/appconfiguration/2023-03-01/operations",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/client",
        "//vendor/github.com/hashicorp/go-azure-sdk/sdk/client/pollers",
        "//vendor/github.com/hashicorp/terraform-plugin-sdk/v2/helper/schema",
        "//vendor/github.com/mitchellh/mapstructure",
        "//vendor/github.com/tombuildsstuff/kermit/sdk/appconfiguration/1.0/appconfiguration",
    ],
)

go_test(
    name = "appconfiguration_test",
    srcs = [
        "app_configuration_data_source_test.go",
        "app_configuration_feature_resource_test.go",
        "app_configuration_key_data_source_test.go",
        "app_configuration_key_resource_test.go",
        "app_configuration_keys_data_source_test.go",
        "app_configuration_resource_test.go",
    ],
    deps = [
        ":appconfiguration",
        "//internal/acceptance",
        "//internal/acceptance/check",
        "//internal/clients",
        "//internal/services/appconfiguration/parse",
        "//internal/tf/pluginsdk",
        "//utils",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/appconfiguration/2023-03-01/configurationstores",
        "//vendor/github.com/tombuildsstuff/kermit/sdk/appconfiguration/1.0/appconfiguration",
    ],
)
