load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "applicationinsights",
    srcs = [
        "application_insights_analytics_item_resource.go",
        "application_insights_api_key_resource.go",
        "application_insights_data_source.go",
        "application_insights_resource.go",
        "application_insights_smart_detection_rule_resource.go",
        "application_insights_standard_webtests_resource.go",
        "application_insights_webtests_resource.go",
        "application_insights_workbook_resource.go",
        "application_insights_workbook_template_resource.go",
        "helpers.go",
        "registration.go",
        "resourceids.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/services/applicationinsights",
    visibility = ["//:__subpackages__"],
    deps = [
        "//helpers/azure",
        "//helpers/tf",
        "//internal/clients",
        "//internal/sdk",
        "//internal/services/applicationinsights/migration",
        "//internal/services/applicationinsights/parse",
        "//internal/services/applicationinsights/validate",
        "//internal/services/monitor/parse",
        "//internal/tags",
        "//internal/tf/pluginsdk",
        "//internal/tf/suppress",
        "//internal/tf/validation",
        "//internal/timeouts",
        "//utils",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/appinsights/mgmt/2020-02-02/insights",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/preview/alertsmanagement/mgmt/2019-06-01-preview/alertsmanagement",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonschema",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/identity",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/location",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/tags",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/applicationinsights/2020-11-20/workbooktemplatesapis",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/applicationinsights/2022-04-01/workbooksapis",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/applicationinsights/2022-06-15/webtestsapis",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/operationalinsights/2020-08-01/workspaces",
    ],
)

go_test(
    name = "applicationinsights_test",
    srcs = [
        "application_insights_analytics_item_resource_test.go",
        "application_insights_api_key_resource_test.go",
        "application_insights_data_source_test.go",
        "application_insights_resource_test.go",
        "application_insights_smart_detection_rule_resource_test.go",
        "application_insights_standard_webtests_resource_test.go",
        "application_insights_webtests_resource_test.go",
        "application_insights_workbook_resource_test.go",
        "application_insights_workbook_template_resource_test.go",
    ],
    deps = [
        ":applicationinsights",
        "//internal/acceptance",
        "//internal/acceptance/check",
        "//internal/clients",
        "//internal/services/applicationinsights/parse",
        "//internal/tf/pluginsdk",
        "//utils",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/applicationinsights/2020-11-20/workbooktemplatesapis",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/applicationinsights/2022-04-01/workbooksapis",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/applicationinsights/2022-06-15/webtestsapis",
    ],
)
