load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "appservice",
    srcs = [
        "function_app_active_slot_resource.go",
        "function_app_function_resource.go",
        "function_app_hybrid_connection_resource.go",
        "identity.go",
        "linux_function_app_data_source.go",
        "linux_function_app_resource.go",
        "linux_function_app_slot_resource.go",
        "linux_web_app_data_source.go",
        "linux_web_app_resource.go",
        "linux_web_app_slot_resource.go",
        "registration.go",
        "resourceids.go",
        "service_plan_data_source.go",
        "service_plan_resource.go",
        "source_control_resource.go",
        "source_control_schema.go",
        "source_control_slot_resource.go",
        "source_control_token_data_source.go",
        "source_control_token_resource.go",
        "web_app_active_slot_resource.go",
        "web_app_hybrid_connection_resource.go",
        "windows_function_app_data_source.go",
        "windows_function_app_resource.go",
        "windows_function_app_slot_resource.go",
        "windows_web_app_data_source.go",
        "windows_web_app_resource.go",
        "windows_web_app_slot_resource.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/services/appservice",
    visibility = ["//:__subpackages__"],
    deps = [
        "//helpers/tf",
        "//helpers/validate",
        "//internal/features",
        "//internal/locks",
        "//internal/sdk",
        "//internal/services/appservice/helpers",
        "//internal/services/appservice/parse",
        "//internal/services/appservice/validate",
        "//internal/services/keyvault/validate",
        "//internal/services/storage/validate",
        "//internal/services/web/validate",
        "//internal/tags",
        "//internal/tf/pluginsdk",
        "//internal/tf/validation",
        "//utils",
        "//vendor/github.com/google/uuid",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/pointer",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonids",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonschema",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/identity",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/location",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/relay/2017-04-01/hybridconnections",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/relay/2017-04-01/namespaces",
        "//vendor/github.com/tombuildsstuff/kermit/sdk/web/2022-09-01/web",
    ],
)

go_test(
    name = "appservice_test",
    srcs = [
        "function_app_active_slot_resource_test.go",
        "function_app_function_resource_test.go",
        "function_app_hybrid_connection_resource_test.go",
        "linux_function_app_data_source_test.go",
        "linux_function_app_resource_authv2_test.go",
        "linux_function_app_resource_test.go",
        "linux_function_app_slot_resource_authv2_test.go",
        "linux_function_app_slot_resource_test.go",
        "linux_web_app_data_source_test.go",
        "linux_web_app_resource_authv2_test.go",
        "linux_web_app_resource_test.go",
        "linux_web_app_slot_resource_authv2_test.go",
        "linux_web_app_slot_resource_test.go",
        "service_plan_data_source_test.go",
        "service_plan_resource_test.go",
        "source_control_resource_test.go",
        "source_control_slot_resource_test.go",
        "source_control_token_data_source_test.go",
        "source_control_token_resource_test.go",
        "web_app_active_slot_resource_test.go",
        "web_app_hybrid_connection_resource_test.go",
        "windows_function_app_data_source_test.go",
        "windows_function_app_resource_authv2_test.go",
        "windows_function_app_resource_test.go",
        "windows_function_app_slot_resource_authv2_test.go",
        "windows_function_app_slot_resource_test.go",
        "windows_web_app_data_source_test.go",
        "windows_web_app_resource_authv2_test.go",
        "windows_web_app_resource_test.go",
        "windows_web_app_slot_resource_authv2_test.go",
        "windows_web_app_slot_resource_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        "//internal/acceptance",
        "//internal/acceptance/check",
        "//internal/clients",
        "//internal/features",
        "//internal/services/appservice/parse",
        "//internal/tf/pluginsdk",
        "//utils",
    ],
)
