load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "authorization",
    srcs = [
        "client_config_data_source.go",
        "pim_active_role_assignment_resource.go",
        "pim_eligible_role_assignment_resource.go",
        "registration.go",
        "role_assignment_marketplace_resource.go",
        "role_assignment_resource.go",
        "role_assignment_resource_base.go",
        "role_definition_data_source.go",
        "role_definition_resource.go",
    ],
    importpath = "github.com/hashicorp/terraform-provider-azurerm/internal/services/authorization",
    visibility = ["//:__subpackages__"],
    deps = [
        "//helpers/azure",
        "//helpers/tf",
        "//internal/clients",
        "//internal/sdk",
        "//internal/services/authorization/azuresdkhacks",
        "//internal/services/authorization/migration",
        "//internal/services/authorization/parse",
        "//internal/services/authorization/validate",
        "//internal/services/billing/validate",
        "//internal/tf/pluginsdk",
        "//internal/tf/suppress",
        "//internal/tf/validation",
        "//internal/timeouts",
        "//utils",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/preview/authorization/mgmt/2020-04-01-preview/authorization",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/resources/mgmt/2021-01-01/subscriptions",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/pointer",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonids",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/authorization/2020-10-01/roleassignmentscheduleinstances",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/authorization/2020-10-01/roleassignmentschedulerequests",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/authorization/2020-10-01/roleeligibilityscheduleinstances",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/authorization/2020-10-01/roleeligibilityschedulerequests",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/authorization/2022-04-01/roleassignments",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/authorization/2022-04-01/roledefinitions",
        "//vendor/github.com/hashicorp/go-uuid",
    ],
)

go_test(
    name = "authorization_test",
    srcs = [
        "client_config_data_source_test.go",
        "pim_active_role_assignment_test.go",
        "pim_eligible_role_assignment_test.go",
        "role_assignment_marketplace_resource_test.go",
        "role_assignment_resource_test.go",
        "role_definition_data_source_test.go",
        "role_definition_resource_test.go",
    ],
    deps = [
        "//internal/acceptance",
        "//internal/acceptance/check",
        "//internal/clients",
        "//internal/services/authorization/parse",
        "//internal/tf/pluginsdk",
        "//utils",
        "//vendor/github.com/google/uuid",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/pointer",
        "//vendor/github.com/hashicorp/go-azure-helpers/lang/response",
        "//vendor/github.com/hashicorp/go-azure-helpers/resourcemanager/commonids",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/authorization/2020-10-01/roleassignmentscheduleinstances",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/authorization/2020-10-01/roleeligibilityscheduleinstances",
        "//vendor/github.com/hashicorp/go-azure-sdk/resource-manager/authorization/2022-04-01/roleassignments",
    ],
)
